--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.3",
     "csv-parse": "^5.5.3",
-    "next": "14.1.0",
+    "next": "^14.2.28",
     "next-themes": "^0.2.1",
     "openai": "^4.28.0",
     "papaparse": "^5.4.1",
@@ -37,6 +37,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "vitest": "^3.1.1"
   }
 }
